search button added

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 <body>
     <h1>Car Gallery</h1>
 
+    <!-- Search Input -->
+    <input type="search" name="" placeholder="Enter search" id="searchInput">
+
     <div id="filterButtons"></div>
 
     <div id="carContainer"></div>
